# simple-neural-network-cpp

./: .gitignore  CMakeLists.txt  FunctionType.cpp  FunctionType.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  StackTrace.cpp  StackTrace.h  main.cpp
nn/: CMakeLists.txt  FunctionType.cpp  FunctionType.h  Global.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h
runnable/: AND.h  LogicalGate.h  OR.h  Runnable.h  XAND.h  XOR.h
